fixed null value error and temporal types, as well as sort in cottontail